# CogniCode

./: .env  .env.example  .gitignore  .sddk-last-cycle-complete  .sddk-spike-wasm-compat.json  .tool-versions  AUTORESEARCH.md  CONTEXT.md  Cargo.toml  Dockerfile  README.es.md  README.md  adder.go  docker-compose.yml  docker-compose.yml.legacy  docker-entrypoint.sh  enrich_metadata.py  insert_metadata.py  justfile  package-lock.json  package.json  perf-budget.toml  rewrite.sh  rules_metadata_all.json  run-visual-regression.sh  run_autoresearch.sh  rust-intelligence  test_build.jsonl  test_build_out.jsonl  tmp_language_diagnostic.json
crates/cognicode/: Cargo.toml
crates/cognicode-axiom/: Cargo.toml  build.rs
crates/cognicode-axiom/docs/cognicode-rules-skill/: SKILL.md
crates/cognicode-axiom/src/: lib.rs
crates/cognicode-axiom/src/linters/: clippy.rs  mod.rs
crates/cognicode-axiom/src/mcp/: tools.rs
crates/cognicode-axiom/src/quality/: boundary.rs  connascence.rs  lcom.rs  mod.rs  solid.rs
crates/cognicode-axiom/src/rules/: adr_parser.rs  catalog.rs  catalog_tests.rs  catalog_tests_generated.rs  duplication.rs  gates.rs  helpers.rs  mod.rs  preflight.rs  profiles.rs  ratings.rs  regex_patterns.rs  store.rs  subscription_engine.rs  types.rs
crates/cognicode-axiom/tests/: performance_benchmarks.rs  real_world_validation.rs  rule_fixtures.rs  system_integration.rs
crates/cognicode-cli/: Cargo.toml
crates/cognicode-cli/src/: main.rs
crates/cognicode-core/: Cargo.toml
crates/cognicode-core-mock/: Cargo.toml
crates/cognicode-core-mock/src/: lib.rs
crates/cognicode-core/benches/: graph_benchmarks.rs
crates/cognicode-core/src/: lib.rs
crates/cognicode-core/src/application/: error.rs  mod.rs  workspace_session.rs
crates/cognicode-core/src/domain/: error.rs  mod.rs
crates/cognicode-core/src/infrastructure/: mod.rs
crates/cognicode-core/src/interface/: mod.rs
crates/cognicode-core/src/sandbox_core/: artifacts.rs  failure.rs  ground_truth.rs  history.rs  manifest.rs  mcp_core.rs  mod.rs  resource.rs  scoring.rs
crates/cognicode-core/src/schemas/: builtin_descriptors.rs  mod.rs
crates/cognicode-core/tests/: checkpoint_integration.rs  sqlite_feature_gate.rs
crates/cognicode-dashboard/: .gitignore  Cargo.toml  README.md  index.html
crates/cognicode-dashboard/src/: api_client.rs  app.rs  lib.rs  main.rs  server.rs  state.rs  watch_service.rs  ws_handler.rs
crates/cognicode-dashboard/src/api/: analysis.rs  configuration.rs  diagrams.rs  issues.rs  mod.rs  quality_gate.rs
crates/cognicode-dashboard/src/components/: breadcrumbs.rs  diagram_viewer.rs  error_boundary.rs  export_utils.rs  file_browser.rs  filter_bar.rs  gate_status_bar.rs  issue_row.rs  issue_table.rs  live_updates.rs  loading_spinner.rs  metric_card.rs  mod.rs  rating_card.rs  severity_badge.rs  (+2 more)
crates/cognicode-dashboard/style/: main.css
crates/cognicode-db/: Cargo.toml
crates/cognicode-db/src/: agent_interactions.rs  agent_outputs.rs  agent_tasks.rs  avc_contracts.rs  drift_events.rs  files.rs  fts5_index.rs  graph.rs  lib.rs  quality.rs  schema.rs  tool_names.rs  types.rs
crates/cognicode-db/tests/: avc_contract_store_test.rs  fts5_index_test.rs  sqlite_default_excluded.rs  sqlite_feature_gate.rs
crates/cognicode-diagram/: Cargo.toml
crates/cognicode-diagram/.cognicode/: cognicode.db
crates/cognicode-diagram/benches/: inference_benchmark.rs  layout_benchmark.rs  render_benchmark.rs
crates/cognicode-diagram/src/: lib.rs
crates/cognicode-diagram/tests/: integration.rs
crates/cognicode-explorer/: Cargo.toml  MCP-TOOLS.md
crates/cognicode-explorer/migrations/: 20260610000001_graph_upsert_constraints.sql  20260612000001_view_specs.sql
crates/cognicode-explorer/src/: api.rs  api_graph_tests.rs  api_rationale_tests.rs  boundary.rs  cli_dispatch.rs  dto.rs  dto_tests.rs  error.rs  lib.rs  mcp.rs  postgres_bridge.rs  registry.rs  service.rs  service_tests.rs  view_spec_store.rs
crates/cognicode-explorer/tests/: api_landing_truncation.rs  brain_session_lifecycle.rs  ci_postgres_pipeline.rs  cli_precedence.rs  context_builder_integration.rs  explorer_graph_foundation.rs  graph_analyze_integration.rs  integration.rs  internal_mcp_integration.rs  lens_mcp_integration.rs  mcp_edge_metadata.rs  metadata_aware_repository.rs  multimodal_feature_gate.rs  named_views_integration.rs  pg_bridge_contract.rs  pg_exploration_session_contract.rs  postgres_quality_integration.rs  postgres_quality_write_integration.rs  quality_mcp_integration.rs  sqlite_feature_gate.rs  test_gating_skips_when_no_env.rs
crates/cognicode-graph-algos/: Cargo.toml
crates/cognicode-graph-algos/src/: error.rs  graph_builder.rs  lib.rs
crates/cognicode-graph-wasm/: Cargo.toml
crates/cognicode-graph-wasm/src/: json_io.rs  lib.rs  protocol.rs  wasm_bind.rs
crates/cognicode-graph-wasm/tests/: wire_format.rs
crates/cognicode-mcp/: Cargo.toml
crates/cognicode-mcp/src/: auth.rs  diagram_handler.rs  lib.rs  main.rs  mcp_client.rs  server.rs
crates/cognicode-quality/: Cargo.toml
crates/cognicode-quality/src/: config.rs  handler.rs  incremental.rs  lib.rs  main.rs
crates/cognicode-quality/tests/: incremental_integration.rs  mcp_integration.rs  mcp_protocol.rs
crates/cognicode-runtime/: Cargo.toml
crates/cognicode-runtime/src/: lib.rs
crates/cognicode-sandbox/: Cargo.toml
crates/cognicode-sandbox/src/: main.rs  reporting.rs
crates/cognicode-store-traits/: Cargo.toml
crates/cognicode-store-traits/src/: call_graph.rs  dependency_type.rs  file_manifest.rs  graph_store.rs  lib.rs  location.rs  symbol.rs  symbol_kind.rs  value_objects.rs
crates/cognicode/src/: lib.rs
crates/cognicode/tests/: file_ops_integration_tests.rs  lsp_integration_test.rs  refactor_integration_tests.rs  safety_gate_tests.rs  sandbox_orchestrator_test.rs  security_validation_tests.rs
crates/rcode-debug/: Cargo.toml
crates/rcode-debug/src/: analysis.rs  client.rs  doctor.rs  error.rs  lib.rs  orchestrator.rs
crates/rcode-debug/tests/: integration.rs
docs/parked-crates/cognicode-rule-test-harness/: Cargo.toml
(+2771 files in other folders)
