[workspace]
resolver = "2"
members = [
    "crates/cognicode",
    "crates/cognicode-core",
    "crates/cognicode-mcp",
    "crates/cognicode-cli",
    "crates/cognicode-sandbox",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["CogniCode Team"]

[workspace.dependencies]
# Internal
cognicode-core = { path = "crates/cognicode-core" }

# Parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

# Grafos
petgraph = "0.6"

# Async
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal", "process", "io-util"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = { version = "2.0", features = ["serde"] }
redb = "2.0"
blake3 = "1.5"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Collections
arc-swap = "1.0"
dashmap = "5"
indexmap = "2"
parking_lot = "0.12"

# Filesystem
ignore = "0.4"
walkdir = "2"
tempfile = "3.27"
glob = "0.3"

# Time
chrono = { version = "0.4", features = ["clock"] }
time = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"

# Base64
base64 = "0.22"

# Parallelism
rayon = "1.11.0"

# LSP
lsp-types = "0.93"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic"] }

# Mermaid
mermaid-rs-renderer = { version = "0.2", default-features = false }

# CLI
clap = { version = "4.4", features = ["derive"] }

# MCP
rmcp = { version = "1.4", features = ["server", "transport-io", "client", "transport-child-process", "which-command"] }
process-wrap = "9.1"

# Rig-core (optional)
rig-core = { version = "0.35", default-features = false, features = ["rustls"] }

# Dev deps
tokio-test = "0.4"
mockall = "0.11"
