[workspace]
resolver = "2"
members = [
    "crates/cognicode",
    "crates/cognicode-core",
    "crates/cognicode-mcp",
    "crates/cognicode-cli",
    "crates/cognicode-sandbox",
    "crates/cognicode-graph-algos",
    "crates/cognicode-graph-wasm",

    "crates/cognicode-macros",
    # "crates/cognicode-axiom",       # PARKED — era agentic rules redesign pending deep review
    # "crates/cognicode-quality",      # PARKED — depends on axiom
    # "crates/cognicode-rule-test-harness", # PARKED — depends on axiom
    "crates/cognicode-explorer",
    "crates/cognicode-core-mock",
    "crates/cognicode-runtime",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["CogniCode Team"]

[workspace.dependencies]
# Internal
cognicode-core = { path = "crates/cognicode-core" }
cognicode-graph-algos = { path = "crates/cognicode-graph-algos" }
# cognicode-axiom = { path = "crates/cognicode-axiom" }  # PARKED
cognicode-macros = { path = "crates/cognicode-macros" }

# Parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-hcl = "1.1"
tree-sitter-yaml = "0.7"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.26"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-dart = "0.2"
tree-sitter-groovy = "0.1"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.19"
tree-sitter-haskell = "0.23"
tree-sitter-julia = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-r = "1.2"
tree-sitter-powershell = "0.26"
tree-sitter-json = "0.24"
tree-sitter-fortran = "0.6"
tree-sitter-verilog = "1.0"
tree-sitter-systemverilog = "0.3"

# Grafos
petgraph = "0.6"

# Async
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal", "process", "io-util"] }
async-trait = "0.1"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
axum = "0.7"
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlparser = "0.53"
bincode = { version = "2.0", features = ["serde"] }
blake3 = "1.5"
sha2 = "0.10"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Collections
arc-swap = "1.0"
dashmap = "5"
indexmap = "2"
parking_lot = "0.12"

# Filesystem
ignore = "0.4"
walkdir = "2"
tempfile = "3.27"
glob = "0.3"

# Time
chrono = { version = "0.4", features = ["clock"] }
time = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"

# Base64
base64 = "0.22"

# Constant-time comparison (M3.5 Bearer-token auth middleware).
# `subtle` is a tiny `no_std`-friendly crate that gives us
# `ConstantTimeEq` to compare Bearer tokens without leaking length or
# content timing to attackers. Avoids the well-known foot-gun of
# `if a == b { ok }` for secret comparison.
subtle = "2.6"

# Markdown parser — pulled in by `cognicode-core` (under the
# `multimodal` feature) to drive the `DocsExtractor`. Industry-standard
# event-based parser with zero-copy iteration. Bump the version
# consciously: the 0.10+ releases split off the `Options` builder, so
# any consumer that touches the API must recompile.
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }

# Parallelism
rayon = "1.11.0"

# LSP
lsp-types = "0.93"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic"] }
opentelemetry-prometheus = "0.27"
# Direct dep so the server binary can build a `prometheus::Registry` and
# call `TextEncoder::encode(&registry.gather(), …)` on `/metrics` (the
# 0.27 OTel→Prom exporter removed the old `Prometheus::default().export()`
# shortcut). Matches the 0.13.4 transitive already resolved in Cargo.lock
# via opentelemetry-prometheus 0.27 — adding it here is resolution-neutral.
prometheus = "0.13"

# Mermaid
mermaid-rs-renderer = { version = "0.2", default-features = false }

# CLI
clap = { version = "4.4", features = ["derive"] }

# MCP
rmcp = { version = "1.7", features = ["server", "transport-io", "client", "transport-child-process", "transport-streamable-http-server", "transport-streamable-http-server-session", "which-command"] }
process-wrap = "9.1"

# Rig-core (optional)
rig-core = { version = "0.35", default-features = false, features = ["rustls"] }

# TOML parsing for C4 architecture inference (E6 ADR-039)
toml = "0.8"

# Dev deps
tokio-test = "0.4"
mockall = "0.11"

# PostgreSQL async driver (gated behind the `postgres` feature in cognicode-core).
# `macros` is required for `#[derive(sqlx::FromRow)]`. We intentionally do
# NOT enable the `migrate` feature here because it pulls `sqlx-sqlite`,
# which we no longer use in the workspace. Integration tests build their
# own per-test isolated database via a tiny manual fixture instead of
# `#[sqlx::test]` — same isolation guarantee, no extra features. Document
# this in the PR description.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
