[package]
name = "cognicode-core-mock"
version = "0.5.0"
edition = "2021"

[dependencies]
cognicode-core = { path = "../cognicode-core" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
mockall = "0.11"

# Re-exported by cognicode-core (for direct use in tests)
lsp-types = "0.93"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
bincode = { version = "2.0", features = ["serde"] }
