[package]
name = "cognicode-core"
description = "Code intelligence library for AI agents"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
# Default is `["persistence", "postgres"]`. The Graph Intelligence v2
# cleanup removed the `sqlite` feature and its gated code paths
# (`open_db`, `open_fts_db`, `record_tool_usage`, agent_outputs
# persistence, dashboard telemetry) — the workspace default build is
# rusqlite-free. PostgreSQL remains the canonical persistence layer.
default = ["persistence", "postgres"]
rig = ["dep:rig-core"]
persistence = ["dep:blake3"]
# `postgres` is additive to `persistence` — both can be active simultaneously.
# When enabled, the workspace `sqlx` dep is pulled in with its
# `runtime-tokio` + `postgres` features.
postgres = ["dep:sqlx"]
# `multimodal` is an opt-in feature that enables the Generic Graph
# Layer (`NodeKind`, `EdgeKind`, `NodeId`, `GraphNode`, `GraphEdge`)
# and the docs-source adapter (`SourceExtractor`, `DocsExtractor`,
# `DocsConfidenceRules`). All new code is feature-gated via
# `#[cfg(feature = "multimodal")]` so the default build is unchanged.
# Off by default.
multimodal = []

[dependencies]
# Parsing
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true

# Grafos
petgraph.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bincode = { workspace = true, features = ["serde"] }
blake3 = { workspace = true, optional = true }

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Collections
arc-swap.workspace = true
dashmap.workspace = true
indexmap.workspace = true
parking_lot.workspace = true

# Filesystem
ignore.workspace = true
walkdir.workspace = true
tempfile.workspace = true
glob.workspace = true

# Time
chrono.workspace = true
time.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Regex
regex.workspace = true

# Base64
base64.workspace = true

# Parallelism
rayon.workspace = true

# LSP
lsp-types.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

# Mermaid
mermaid-rs-renderer.workspace = true

# CLI
clap.workspace = true

# MCP
rmcp.workspace = true
process-wrap.workspace = true

# Markdown parser — gated behind the `multimodal` feature so the
# default build is pulldown-free. Pulled in by the `DocsExtractor`
# (`infrastructure::extraction::docs_extractor`). The dep is declared
# unconditionally (NOT under `optional = true`) so the call site
# can `use pulldown_cmark::…` behind a `#[cfg(feature = "multimodal")]`
# guard without needing the dep to be optional.
pulldown-cmark.workspace = true

# (REMOVED for `explorer-graph-repository-bridge` slice — `cognicode-store-traits`
# is now deprecated and has zero Rust-level uses in this crate. The crate remains
# in the workspace for now; removal is scheduled for after the PostgreSQL adapter
# lands. See crates/cognicode-store-traits/src/lib.rs for the migration map.)

# PostgreSQL async driver — optional, gated behind the `postgres` feature.
# When the feature is off, this dep is absent from the build graph.
sqlx = { workspace = true, optional = true }

# Rig-core (optional)
rig-core = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
tempfile.workspace = true
criterion = "0.5"

[[bench]]
name = "graph_benchmarks"
harness = false
