[package]
name = "cognicode-core"
description = "Code intelligence library for AI agents"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
# Default is `["persistence", "postgres"]`. The Graph Intelligence v2
# cleanup removed the `sqlite` feature and its gated code paths
# (`open_db`, `open_fts_db`, `record_tool_usage`, agent_outputs
# persistence, dashboard telemetry) ŌĆö the workspace default build is
# rusqlite-free. PostgreSQL remains the canonical persistence layer.
default = ["persistence", "postgres"]
rig = ["dep:rig-core"]
persistence = ["dep:blake3"]
# `postgres` is additive to `persistence` ŌĆö both can be active simultaneously.
# When enabled, the workspace `sqlx` dep is pulled in with its
# `runtime-tokio` + `postgres` features.
postgres = ["dep:sqlx"]
# `multimodal` is an opt-in feature that enables the Generic Graph
# Layer (`NodeKind`, `EdgeKind`, `NodeId`, `GraphNode`, `GraphEdge`)
# and the docs-source adapter (`SourceExtractor`, `DocsExtractor`,
# `DocsConfidenceRules`). All new code is feature-gated via
# `#[cfg(feature = "multimodal")]` so the default build is unchanged.
# Off by default.
multimodal = []

[dependencies]
# Proc macros for tool definitions
cognicode-macros.workspace = true

# Parsing
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-hcl.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-dart.workspace = true
tree-sitter-groovy.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-erlang.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-julia.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-r.workspace = true
tree-sitter-powershell.workspace = true
tree-sitter-json.workspace = true
tree-sitter-fortran.workspace = true
tree-sitter-verilog.workspace = true
tree-sitter-systemverilog.workspace = true

# Grafos
petgraph.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bincode = { workspace = true, features = ["serde"] }
blake3 = { workspace = true, optional = true }
sha2 = { workspace = true }
notify = { workspace = true }

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Collections
arc-swap.workspace = true
dashmap.workspace = true
indexmap.workspace = true
parking_lot.workspace = true

# Filesystem
ignore.workspace = true
walkdir.workspace = true
tempfile.workspace = true
glob.workspace = true

# Time
chrono.workspace = true
time.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Regex
regex.workspace = true

# Base64
base64.workspace = true

# Parallelism
rayon.workspace = true

# LSP
lsp-types.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

# Mermaid
mermaid-rs-renderer.workspace = true

# CLI
clap.workspace = true

# MCP
rmcp.workspace = true
process-wrap.workspace = true

# Markdown parser ŌĆö gated behind the `multimodal` feature so the
# default build is pulldown-free. Pulled in by the `DocsExtractor`
# (`infrastructure::extraction::docs_extractor`). The dep is declared
# unconditionally (NOT under `optional = true`) so the call site
# can `use pulldown_cmark::ŌĆ”` behind a `#[cfg(feature = "multimodal")]`
# guard without needing the dep to be optional.
pulldown-cmark.workspace = true

# PostgreSQL async driver ŌĆö optional, gated behind the `postgres` feature.
# When the feature is off, this dep is absent from the build graph.
sqlx = { workspace = true, optional = true }

# Rig-core (optional)
rig-core = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
tempfile.workspace = true
criterion = "0.5"

[[bench]]
name = "graph_benchmarks"
harness = false
