[package]
name = "cognicode-dashboard"
version = "0.1.0"
edition = "2021"
description = "CogniCode Dashboard — Web UI for code quality analysis"
authors = ["CogniCode Team"]
license = "MIT"

[dependencies]
# Leptos Web Framework
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"

# CogniCode Libraries (embedded, in-process)
cognicode-quality = { path = "../cognicode-quality" }
cognicode-core = { path = "../cognicode-core" }
cognicode-axiom = { path = "../cognicode-axiom" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
gloo-timers = "0.3"

# Utils
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
