[package]
name = "cognicode-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared SQLite persistence layer for cognicode-mcp and cognicode-quality"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
blake3.workspace = true
cognicode-core.workspace = true
bincode.workspace = true