[package]
name = "cognicode-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared persistence layer for CogniCode MCP servers (deprecated — SQLite removed in the Graph Intelligence v2 cleanup)"

[features]
# Default is empty — the `sqlite` feature was removed in the
# Graph Intelligence v2 cleanup. The crate is kept in the workspace
# as a placeholder for the upcoming PostgreSQL-backed reimplementation;
# the source modules are temporarily all gated off (see lib.rs).
default = []
# Test-only accessors used by integration tests outside the crate
# (mirrors the `test-utils` feature on cognicode-explorer).
test-utils = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
blake3.workspace = true
bincode.workspace = true
# (REMOVED for `explorer-graph-repository-bridge` slice — `cognicode-store-traits`
# is deprecated; this crate implements the canonical `cognicode_core::GraphStore`
# directly. See crates/cognicode-store-traits/src/lib.rs for the migration map.)
cognicode-core.workspace = true
regex.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
