[package]
name = "cognicode-diagram"
description = "Inferred diagramming and C4 Model reverse engineering for CogniCode"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Internal
cognicode-core = { path = "../cognicode-core" }

# Graph layout
rust-sugiyama = "0.4"
petgraph = { workspace = true }
indexmap = { version = "2", features = ["serde"] }

# Parsing
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlparser = { workspace = true }
regex = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Parallelism
rayon = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "layout_benchmark"
harness = false

[[bench]]
name = "inference_benchmark"
harness = false

[[bench]]
name = "render_benchmark"
harness = false
