[package]
name = "cognicode-explorer"
description = "CogniCode Explorer — moldable code exploration API and MCP"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "cognicode_explorer"
path = "src/lib.rs"

[features]
# Default flipped from `["sqlite"]` to `["postgres"]` in PR 2
# (`postgres-default-config`). The `sqlite` feature was then
# removed in the Graph Intelligence v2 cleanup. The explorer's
# `changed_only` flag and SQLite-backed graph store / adapters
# (e.g. `SqliteGraphStore`, `sqlite_quality_adapter`,
# `fts5_search_adapter`) were removed with it — the explorer
# now uses the in-memory `GraphStore` only, with the
# `postgres` feature adding an optional PG-bridged store.
default = ["postgres"]
# `postgres` is the default. When enabled, the explorer can load a
# `CallGraph` from PostgreSQL at binary startup (see
# `postgres_bridge.rs`). Adds `sqlx` + `async-trait`.
postgres = ["cognicode-core/postgres", "dep:sqlx"]
# Exposes test-only accessors (e.g. `ExplorerMcpHandler::registry`)
# so integration tests outside the crate can drive the
# brain-session lifecycle.
test-utils = []
# `multimodal` is an opt-in feature that enables the Generic Graph
# Layer (new `NodeKind`/`EdgeKind` targets), the docs-source adapter
# (`SourceExtractor`, `DocsSourceAdapter`), and the multimodal MCP
# tools (`docs_ingest`, `graph_search`). Off by default.
multimodal = ["cognicode-core/multimodal"]

[dependencies]
cognicode-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rmcp.workspace = true
chrono.workspace = true
regex.workspace = true
inventory = "0.1"
axum = "0.7"
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Optional dependencies — only pulled in when the `postgres` feature
# is enabled. Keeps the default build sqlx-free.
sqlx = { workspace = true, optional = true }
# TOML parsing for C4 architecture inference (E6 ADR-039)
toml.workspace = true
# YAML parsing for expected-architecture.yaml drift detection
serde_yaml.workspace = true
# `async-trait` is always needed — the facade traits use `#[async_trait]`.
# It is NOT optional because the proc macro must always be available.
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true
async-trait.workspace = true
tempfile = "3.27"
tower.workspace = true
